filter za režije, sitne izmjene podataka o nekretninama

--- a/Capio/app/src/main/res/layout/activity_filter.xml
+++ b/Capio/app/src/main/res/layout/activity_filter.xml
@@ -70,6 +70,40 @@
         android:max="300"
         android:layout_below="@+id/drugi"/>
 
+    <LinearLayout
+        android:id="@+id/treci"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        android:layout_below="@+id/areaFilter">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/filter_overheads"
+            android:textSize="22sp"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/overheadsValue"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="22sp"/>
+
+    </LinearLayout>
+
+    <SeekBar
+        android:id="@+id/overheadsFilter"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:progress="1500"
+        android:max="3000"
+        android:layout_below="@+id/treci"/>
+
     <TextView
         android:id="@+id/roomsText"
         android:text="@string/rooms_filter"
@@ -77,10 +111,10 @@
         android:layout_height="40dp"
         android:gravity="center_vertical"
         android:textSize="22sp"
-        android:layout_below="@id/areaFilter"/>
+        android:layout_below="@id/overheadsFilter"/>
 
     <LinearLayout
-        android:id="@+id/treci"
+        android:id="@+id/cetvrti"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal"
