--- a/Capio/app/src/main/res/layout/fragment_realestate.xml
+++ b/Capio/app/src/main/res/layout/fragment_realestate.xml
@@ -3,6 +3,7 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="210dp"
+    android:layout_marginTop="@dimen/margin_tiny"
     android:orientation="horizontal">
 
     <ImageView
@@ -36,14 +37,6 @@
             android:textColor="@color/whiteText"
             android:textSize="15dp"
             android:text="dsafasdf"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="@color/whiteText"
-        android:layout_alignParentBottom="true">
 
     </LinearLayout>
 
