--- a/Capio/app/src/main/res/layout/profile.xml
+++ b/Capio/app/src/main/res/layout/profile.xml
@@ -265,6 +265,13 @@
             android:onClick="openFilter"
             android:text="@string/set_filters_button"/>
 
+        <Button
+            android:id="@+id/seeUnits"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="seeUnits"
+            android:text="@string/see_units"/>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="0.1dp"
