--- a/Capio/app/src/main/res/layout/toolbar.xml
+++ b/Capio/app/src/main/res/layout/toolbar.xml
@@ -25,9 +25,11 @@
 
 
     <TextView
+        android:id="@+id/save"
+        android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="EDIT"
+        android:text="SAVE"
         android:textSize="14dp"
         android:layout_gravity="right"
         android:layout_marginRight="20dp"
