--- a/Capio/app/src/main/res/layout/profile.xml
+++ b/Capio/app/src/main/res/layout/profile.xml
@@ -56,7 +56,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text=" Full Name"
+                            android:text=" Ime i prezime"
                             android:layout_marginStart="5dp"
                             android:textSize="14sp"
                             android:textColor="#000"/>
@@ -93,7 +93,7 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text=" Address"
+                                android:text=" Adresa"
                                 android:layout_marginStart="10dp"
                                 android:textSize="14sp"
                                 android:textColor="#000"/>
@@ -136,7 +136,7 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text=" City"
+                                android:text=" Grad"
                                 android:layout_marginStart="8dp"
                                 android:textSize="14sp"
                                 android:textColor="#000"/>
@@ -300,7 +300,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Mobile"
+                    android:text="Mobitel"
                     android:textSize="14sp"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="20dp"/>
