--- a/Capio/app/src/main/res/layout/toolbar.xml
+++ b/Capio/app/src/main/res/layout/toolbar.xml
@@ -29,7 +29,7 @@
         android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SAVE"
+        android:text="SPREMI"
         android:textSize="14dp"
         android:layout_gravity="right"
         android:layout_marginRight="20dp"
