--- a/Capio/app/src/main/res/layout/fragment_map.xml
+++ b/Capio/app/src/main/res/layout/fragment_map.xml
@@ -7,4 +7,33 @@ android:layout_height="match_parent" >
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
 
+
+<ImageView
+    android:id="@+id/appPic"
+    android:layout_width="match_parent"
+    android:layout_height="180dp"
+    android:background="@color/cardview_dark_background"
+    android:visibility="invisible"
+    android:layout_alignParentBottom="true"
+    />
+    <TextView
+        android:id="@+id/appDesc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:textColor="@color/whiteText"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:textAlignment="viewStart"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/redirect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/appPic"
+        android:text="GO" />
+
 </RelativeLayout>
