--- a/Capio/app/src/main/res/layout/activity_create_unit.xml
+++ b/Capio/app/src/main/res/layout/activity_create_unit.xml
@@ -63,6 +63,7 @@
                 android:hint="Kučanski broj"
                 android:maxLength="5"
                 android:maxLines="1"
+                android:inputType="number"
                 android:typeface="serif"/>
 
             <EditText
